# fillit

./: fillit.h  is_valid.c  main.c  print.c
Fillit/: CMakeLists.txt  Makefile  a.out  algos.c  fillit  fillit.h  help_function.c  is_valid.c  main.c  map.c  print.c  tetra.c  tetras.c  valid_test.sh
Fillit/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_count_mass.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lenint.c  ft_lstadd.c  ft_lstbackadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_max.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  (+29 more)
Fillit/tests/valid/: test_6.txt  test_7.txt
